# flask-chat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env_example  pyproject.toml
db_configurations/confs/: mongod.conf
db_configurations/scripts/: init_db.py
flask_chat/: app.py  constants.py  decorators.py  entrypoint.sh  filters.py  forms.py  functions.py  gunicorn.conf.py  init_db.py  logging_config.py  models.py  services.py  views.py
flask_chat/static/: message_handler.js
flask_chat/static/js/: message_handler.js
flask_chat/templates/: _form_macros.html  error.html  index.html  login.html  profile.html  profile_public.html  register.html  settings_profile.html  verification.html
flask_chat/utils/: constants.py  filters.py  helpers.py
setup-scripts/: setup.sh
setup/confs/: nginx.conf  template
setup/scripts/: setup.sh
